# MegaDriveEnvironmentSampleGame

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build_megadrive.sh  build_pc.sh  check.sh  configure_controls.sh  emulator.sh  run_emulator.sh  run_pc.sh
assets/: README.md
cmake/: Assets.cmake  ProjectOptions.cmake  SourceManifest.cmake  Tests.cmake
config/: shared_sources.json
docs/: ARCHITECTURE.md  ASSETS.md  BUILDING.md  MEMORY_MODEL.md
include/MegaDriveEnvironmentSampleGame/: BoingBallDemo.hpp  BoingBallFmSfx.hpp  ControllerReader.hpp  FreestandingStd.hpp  GameConfig.hpp  GameSession.hpp  Memory.hpp  PsgSoundEffects.hpp  SampleGame.hpp  StdCompat.hpp  VdpUtils.hpp
include/MegaDriveEnvironmentSampleGame/audio/: PsgSoundEffects.hpp
include/MegaDriveEnvironmentSampleGame/controllers/: ControllerReader.hpp
include/MegaDriveEnvironmentSampleGame/game/: GameSession.hpp
include/MegaDriveEnvironmentSampleGame/memory/: Memory.hpp
include/MegaDriveEnvironmentSampleGame/platform/: PlatformMemory.hpp
include/MegaDriveEnvironmentSampleGame/platform/megadrive/: HardwareMemory.hpp
include/MegaDriveEnvironmentSampleGame/platform/megadrive_environment/: EnvironmentMemory.hpp
include/MegaDriveEnvironmentSampleGame/runtime_tests/: TestFontPNG.hpp  TestFontSDL.hpp
include/MegaDriveEnvironmentSampleGame/runtime_tests/controllers/: TestControllers.hpp
include/MegaDriveEnvironmentSampleGame/runtime_tests/sound/: AudioHeadlessTest.hpp  TestSound.hpp
include/MegaDriveEnvironmentSampleGame/runtime_tests/vdp_tests/: TestVDP.hpp
megadrive/: header.s  main.s  rom.ld
scripts/: common.sh
sound/: README.md
sound/amiga_assets/: README.md
sound/tools/: assemble_z80.py  boing_pcm.py  convert_boing_pcm.py
sound/z80/: boing_ball_sfx.s
src/: BoingBallDemo.cpp  BoingBallFmSfx.cpp  ControllerReader.cpp  GameSession.cpp  Memory-MD.cpp  Memory-PC.cpp  PsgSoundEffects.cpp  SampleGame.cpp  VdpUtils.cpp  main-MD.cpp  main-PC.cpp  main.cpp
src/audio/: PsgSoundEffects.cpp
src/controllers/: ControllerReader.cpp
src/game/: GameSession.cpp
src/megadrive/: CartridgeGame.cpp  CartridgeMain.cpp
src/memory/: Memory.cpp
src/platform/megadrive/: HardwareMemory.cpp  PlatformMemory.cpp
src/platform/megadrive_environment/: EnvironmentMemory.cpp  PlatformMemory.cpp
src/runtime_tests/: TestFontPNG.cpp  TestFontSDL.cpp
src/runtime_tests/controllers/: TestControllers.cpp
src/runtime_tests/sound/: AudioHeadlessTest.cpp  TestSound.cpp
src/runtime_tests/vdp_tests/: TestVDPRunner.cpp  TestVDPSetup.cpp  TestVDPTest01.cpp  TestVDPTest02.cpp  TestVDPTest03.cpp  TestVDPTest04.cpp  TestVDPTest05.cpp  TestVDPTest06.cpp  TestVDPTest07.cpp  TestVDPTest08.cpp  TestVDPTest09.cpp  TestVDPTest10.cpp  TestVDPTest11.cpp  TestVDPTest12.cpp  TestVDPTest13.cpp  TestVDPTest14.cpp  TestVDPTest15.cpp  TestVDPTest16.cpp  TestVDPTest17.cpp  TestVDPTest18.cpp
tests/: BoingBallDemoTest.cpp  BoingBallFmSfxTest.cpp  ControllerReaderTest.cpp  GameSessionTest.cpp  MemoryTest.cpp  PsgSoundEffectsTest.cpp  test_build_asset_rom.py  test_build_assets.py  test_source_manifest.py
tests/fixtures/: TestVDP_expected.txt
tools/: assemble_z80.py  asset_pack.py  boing_pcm.py  build_asset_rom.py  build_assets.py  build_megadrive_rom.py  convert_boing_pcm.py  tiles.py
z80/: boing_ball_sfx.s
